--- a/src/main/resources/en-en.yml
+++ b/src/main/resources/en-en.yml
@@ -5,6 +5,9 @@ BundleMessages:
     Withdraw-All-Message: "&aYou have withdraw all gold ingots to your inventory."
     Balance-Own-Message: "&aBalance of %s"
     Balance-Message: "&aBalance of %p : %b"
+    Eco-Set-Success: "&aSuccessfully %p's balance has been set to %b!"
+    Success-Sender: "&aSuccessfully paid %a to %p."
+    Success-Receiver: "&aYou received %a from %s."
 ErrorMessages:
     No-Permission: "&cYou do not have permission."
     Not-Player: "&cThis command only for players."
@@ -15,11 +18,16 @@ ErrorMessages:
     Not-Zero: "&cYou must enter an amount greater than 0."
     Full-Inventory: "&cYour inventory is full."
     Not-Enough-Space: "&cYour inventory does not have enough space" 
+    Invalid-Quantity: "&cYou have entered an invalid amount"
+    Player-Not-Online: "&cThe player is not online"
+    Not-Enough-Balance: "&cYour balance is not enough."
 Commands-Usage:
     EcoBundle-Help-Usage: "&6The command usage is /eco-bundle help"
     Deposit-Usage: "&6The command usage is /deposit <gold-ingot-amount | all>"
     Withdraw-Usage: "&6The command usage is /withdraw <gold-ingot-amount | all>"
     Balance-Usage: "&6The command usage is /balance [player]"
+    Baltop-Usage: "&6The command usage is /baltop [page]"
+    Pay-Usage: "&6The command usage is /pay [target] [amount]"
 Baltop:
-  Header: "&6--- Top Balance Players ---"
-  Entry: "&a%p: &e%b"
+    Header: "&6--- Top Balance Players ---"
+    Entry: "&a%p: &e%b"
